# rtt

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
docs/: 2026-02-13_RTT Frontend Redesign Spec.md
frontend/: index.html
frontend/docs/conversations/: 2026-02-13_860de1e8.md
frontend/src/: app.ts  style.css
frontend/static/: style.css
scripts/: download_test.py  embed_stdin.py  enrich_stdin.py  fetch_prelinger.py
src/rtt/: __main__.py  batch.py  frames.py  main.py  package.py  runtime.py  server.py  transcribe.py  types.py  util.py  vector.py  youtube.py
tests/: conftest.py  test_batch.py  test_e2e.py  test_frames.py  test_frames_e2e.py  test_server.py  test_transcribe.py
